# Windows-MCP

./: manifest.json  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
src/windows_mcp/filesystem/: __init__.py  service.py
src/windows_mcp/registry/: __init__.py
src/windows_mcp/tree/: cache_utils.py
src/windows_mcp/uia/: controls.py  core.py  exceptions.py
tests/: test_filesystem_service.py  test_multi_tools.py
