[project]
name = "windows-mcp"
version = "0.8.1"
description = "Lightweight MCP Server for interacting with Windows Operating System."
authors = [
    { name = "Jeomon George", email = "jeogeoalukka@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["windows", "mcp", "ai", "desktop", "ai agent"]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: System :: Shells",
]
dependencies = [
    "click>=8.4.1",
    "comtypes>=1.4.16",
    "dxcam>=0.3.0",
    "fastmcp>=3.3.1",
    "fuzzywuzzy>=0.18.0",
    "markdownify>=1.2.2",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "posthog>=7.15.3",
    "psutil>=7.2.2",
    "pygments>=2.20.0",
    "python-levenshtein>=0.27.3",
    "pywin32>=311",
    "requests>=2.34.2",
    "tabulate>=0.10.0",
    "thefuzz>=0.22.1",
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.14",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/CursorTouch"
Repository = "https://github.com/CursorTouch/Windows-MCP"
Issues = "https://github.com/CursorTouch/Windows-MCP/issues"

[project.scripts]
windows-mcp = "windows_mcp.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/windows_mcp/uia/*.py" = ["F403", "F405", "F841"]
"src/windows_mcp/**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.extra-build-dependencies]
pyperclip = ["setuptools"]
